--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,11 @@
   publish = "public"
 
 [[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Type = "text/html; charset=utf-8"
+
+[[headers]]
   for = "/*.txt"
   [headers.values]
     Content-Type = "text/plain; charset=utf-8"
